<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GrcBoxAndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="URL">URL to file</string>
    <string name="PORT">PORT</string>
    <string name="AppName">Application Name</string>
	<string name="Iteration">Loop</string>
	<string name="Results">Results</string>
    <string name="Wifista">Wifi-STA</string>
    <string name="Wifiah">Wifi-AH</string>
    <string name="Ethernet">Ethernet</string>
    <string name="Rule">Reg/De-Reg Rule</string>
    <string name="App">Reg/De-Reg App</string>
    <string name="Download">Download</string>
    <string name="Start">Start/Stop</string>
    <string name="StaticString">*Progress:</string>
    <string name="CheckBoxBoxGrcBox">Use GrcBox for Communication</string>
    
</resources>