<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GrcMain" >

    <EditText
        android:id="@+id/URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/URL" />

    <EditText
        android:id="@+id/PORT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/URL"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/URL"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/PORT" />

    <EditText
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/URL"
        android:layout_below="@+id/URL"
        android:ems="10"
        android:inputType="text"
        android:text="@string/AppName" />

    <EditText
        android:id="@+id/Iteration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/AppName"
        android:layout_alignBottom="@+id/AppName"
        android:layout_alignLeft="@+id/PORT"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/Iteration" />

    <CheckBox
        android:id="@+id/Download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Rule"
        android:layout_below="@+id/Rule"
        android:text="@string/Download" />

    <CheckBox
        android:id="@+id/App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Iteration"
        android:layout_alignTop="@+id/radioIface"
        android:layout_marginRight="14dp"
        android:text="@string/App" />

    <CheckBox
        android:id="@+id/Rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/App"
        android:layout_below="@+id/App"
        android:text="@string/Rule" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/message"
        android:max="100"
        android:progress="0" />

    <CheckBox
        android:id="@+id/checkBoxGrcBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/AppName"
        android:text="@string/CheckBoxBoxGrcBox" />

    <RadioGroup
        android:id="@+id/radioIface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxGrcBox"
        android:layout_below="@+id/checkBoxGrcBox"
        android:layout_marginTop="16dp" >

        <RadioButton
            android:id="@+id/Wifista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Wifista" />

        <RadioButton
            android:id="@+id/Wifiah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wifiah" />

        <RadioButton
            android:id="@+id/Ethernet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ethernet" />
    </RadioGroup>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioIface"
        android:layout_below="@+id/Start"
        android:text="@string/StaticString" />

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Download"
        android:layout_centerHorizontal="true"
        android:onClick="startProcessing"
        android:text="@string/Start" />

</RelativeLayout>